[CI] [52778]  <platform> <feat> beken_genie project use macro control GPIO10 as default wake-up source

--- a/middleware/driver/gpio/Kconfig
+++ b/middleware/driver/gpio/Kconfig
@@ -13,6 +13,11 @@ menu "GPIO"
 		depends on GPIO_WAKEUP_SUPPORT
 		default n
 
+	config DEFAULT_WAKEUP_SOURCE
+		bool "GPIO_10 as default wakeup source"
+		depends on GPIO_WAKEUP_SUPPORT
+		default y
+
 	config GPIO_DYNAMIC_WAKEUP_SOURCE_MAX_CNT
 		int "how many gpio can dynamic set to wakeup system at low power status"
 		range 0 48
