[CI] [52692,52693]  <platform> <fix> fix cpu1 sd nand flash issue

--- a/middleware/driver/sdio_host/Kconfig
+++ b/middleware/driver/sdio_host/Kconfig
@@ -10,5 +10,10 @@ menu "SDIO_HOST"
 	config SDIO_HOST_CLR_WRITE_INT
 		bool "SDIO CLEAR WRITE INT NEED WAIT"
 		default n
+
+        config PIN_SDIO_GROUP_1
+		bool "SDIO pin map select"
+		default n
+
 endmenu
 
