[CI] [52669]  <wifi> <fix> add BLE config network

--- a/components/bk_wifi/Kconfig
+++ b/components/bk_wifi/Kconfig
@@ -343,7 +343,7 @@ menu "Bk_Wifi"
 		range 2 10
 		default 2
 
-	config WIFI_AUTO_RECONNECT
+	config WIFI_AUTO_RESTART
 		depends on WIFI_ENABLE
 		bool "Enable auto reconnect Wi-Fi"
 		default n
