[CI] [52951,52950]  <multimedia> <feat> add new aec version

--- a/middleware/driver/audio/Kconfig
+++ b/middleware/driver/audio/Kconfig
@@ -34,4 +34,10 @@ menu "AUDIO"
 		depends on I2S
 		bool "Enable audio codec chip ES8311 driver"
 		default n
+
+    config MIC1_ANA_GAIN_VALUE
+        int "Config Mic1 Analog Gain value"
+		range 0 15
+		default 0
+
 endmenu
